@startuml

package BusinessLogic {
    note top of HMI
    1/ Based on MVC
    2/ Details TBD
    end note
    class HMI

    interface IMeasurementObserver

}

package Device {
    class DisplayBacklight
    Interface IDisplay

    class Keyboard

    class KeysDebouncer {
        -uint8_t period
    }
}

package Driver {
    interface IAmbientLightSensorDriver
    class DummyAmbientLightSensorDriver
    IAmbientLightSensorDriver <|-- DummyAmbientLightSensorDriver

    interface IDisplayBacklightDriver
    class ST7735DisplayBacklightDriver
    IDisplayBacklightDriver <|-- ST7735DisplayBacklightDriver

    class ST7735Display
    IDisplay <|-- ST7735Display

    interface IKeyboardKeysDriver
    IKeyboardKeysDriver <|-- KeyboardKeysDriver
    class KeyboardKeysDriver
}






DisplayBacklight *-- IAmbientLightSensorDriver
DisplayBacklight *-- IDisplayBacklightDriver

Keyboard *--- IKeyboardKeysDriver
Keyboard *-- KeysDebouncer

HMI *-- IDisplay
HMI *-- DisplayBacklight
HMI *-- Keyboard
HMI -|> IMeasurementObserver

@enduml
